[tool.setuptools.packages.find]
where = ["dab-live-api"]
include = ["DAB"]

[project]
name = "dab-live-api"
readme = "README.md"
authors = [
    { name = "Domenico Blanco", email = "domenicog.blanco@gmail.com" }
]
dependencies = [
    "aiohttp"
]
requires-python = ">=3.12"
license = { file = "LICENSE" }
version = "0.0.1"