[project]
name = "dab-live-api"
readme = "README.md"
authors = [
    { name = "Domenico Blanco", email = "domenicog.blanco@gmail.com" }
]
dependencies = [
    "aiohttp"
]
requires-python = ">=3.12"
license = { file = "LICENSE" }
version = "0.0.1"

[tool.setuptools]
packages = ["dab-live-api"]
py-modules = ["DAB"]